--- a/app/assets/stylesheets/fund_records.css.scss
+++ b/app/assets/stylesheets/fund_records.css.scss
@@ -17,7 +17,7 @@
 	height: 500px;
 	width: 100%;  
     margin: 0 auto; 
-	background-color: red;
+	/*background-color: red;*/
 
 	display: none;
 	border-radius: 20px;
@@ -27,7 +27,7 @@
 
 	height: 250px;
 	width: 100%;
-	background-color: blue;
+/*	background-color: blue;*/
 	margin: 20px;
 	border-radius: 20px;
 
