--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -1,6 +1,6 @@
 
 <div class="row">
-	<div class= "col-sm-2">
+	<div class= "col-sm-3">
 		<%= hidden_field_tag "search_string", @search_string  %>
 		<%= hidden_field_tag "map_title", @title  %>
 		<%= hidden_field_tag "continent", @view_item  %>
@@ -11,16 +11,35 @@
 
 
 		<h4 class="text-center">Investment Sectors</h3>
-		<nav>
-			<ul>
+		<table class="table-bordered">
+			<tr>
+				<th>
+					Sector name
+				</th>
+				<th>
+					% mean change and range
+				</th>
+			</tr>
+			<% @sectors.each do |s| %>
+			<tr>
+				<td>
+					
+						<%=link_to s[0], "/home/show_investment_sector?investment_sector="+s[1],class: @stats[s[0]][2] %><span>(<%=@stats[s[0]][1]%>)</span>
+				
+				</td>
+				<td><%=@stats[s[0]][0]%></td>
+			</tr>
+				<% end %>
+		</table>
+			<!-- <ul>
 				<% @sectors.each do |s| %>
 					<li><%=link_to s[0], "/home/show_investment_sector?investment_sector="+s[1],class: @stats[s[0]][2], data:{toggle: "tooltip", placement: "right"}, title: @stats[s[0]][0]  %><span>(<%=@stats[s[0]][1]%>)</span></li>
 				<% end %>
-			</ul>
-		</nav>
+			</ul> -->
+		<!-- </nav> -->
 	</div>
 
-	<div class = "col-sm-6">
+	<div class = "col-sm-5">
 	<div id="fund_details_show" >
 		<div class="col-sm-6">
 			<div class="fund_details_text">
