--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -102,9 +102,14 @@ ul>li{
 
 
   /* an outside constraint to react against */
-  #constrainer {
+  .constrainer {
       width: 100%;
       height: 200px;
+  }
+
+    .constrainer_sector {
+      width: 100%;
+      height: 400px;
   }
 
 
