--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,6 @@
+
+
+
 .down {
 	background-color: #f2dede;
 
@@ -109,7 +112,7 @@ ul>li{
 
     .constrainer_sector {
       width: 100%;
-      height: 400px;
+      height: 600px;
   }
 
 
@@ -156,3 +159,8 @@ ul>li{
   tr:nth-child(even) {
       background-color: #eee;
   }
+
+  html, body
+{
+  height: 100%;
+}
