--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -11,7 +11,7 @@
 		<div id="things", data-stats= "<%=@things%>" %></div>
 
 
-		<h4 data-toggle="tooltip" data-placement= "top" title="Investment sectors provided by the IMA">Investment Sectors</h3>
+	<h4 data-toggle="tooltip" data-placement= "top" title="Investment sectors provided by the IMA"><span><%=link_to "<-back", @back_url%>  </span>Investment Sectors</h3>
 	<div class="constrainer_sector">
     	<div class="scrolltable">
 		<table class="table-bordered">
@@ -194,16 +194,24 @@
 			</div> -->
 			
 		</div>
-
-		
 	</div>
+	
 		<div id="map_container">
 		    <div class="loading">
 		        <i class="icon-spinner icon-spin icon-large"></i>
 		        Loading data....
 		    </div>
 		 </div>
+		 <h4>Area stats</h4>
+		 <% if @continents.count==1 %>
+	 		<p><%=@continents[0]%>: <span> Number of funds <%=@stats[@continents[0]][1] %></span></p>
+		   <p>Stats <%=@stats[@continents[0]][0] %></p>
 
+		<% else %>
+	   		<p><%=@continents[1]%><span> Number of funds <%=@stats[@continents[1]][1] %></span></p>
+	   		<p>Stats <%=@stats[@continents[1]][0] %></p>
+		<% end %>
+		 
 			<%= link_to "Home", "/home/show_area?continent=home", class: "up" %></li>
 				<% if @continents.count == 1 %>
 					<%= link_to @continents[0], "/home/show_area?continent="+@continents[0], class: @stats[@continents[0]][2], data:{toggle: "tooltip", placement: "right"}, title: @stats[@continents[0]][0] %><span>(<%= @stats[@continents[0]][1]%>)</span>
@@ -249,7 +257,7 @@
 		<% end %>
 
 		<h4>% price change or decile ranking</h4>
-		<% ["Rate", "Decile"].each do |c| %>
+		<% ["%Price Change", "Decile"].each do |c| %>
 
 			<% if @measure.to_s == c %>
 			
@@ -266,8 +274,8 @@
 
 	</div>
 	<div class= "col-sm-4" >
-		<h3>Funds and Performance last 4 weeks</h3>
-
+		<h4><%=@title%></h4>
+		<h4><%=@subtitle%></h4>
 			<div class="constrainer">
     			<div class="scrolltable">
 				
@@ -275,13 +283,21 @@
 					<table class="table-bordered header">
 					  <tr>
 					    <th width="30%">Name</th>
-					    <th width="15%" data-toggle="tooltip" data-placement= "top" title="Cumulative price change over the period.">% Price Change</th>
+					    <% if @measure=="%Price Change" %>
+					    	<th width="15%" data-toggle="tooltip" data-placement= "top" title="Cumulative price change over the period.">% Price Change</th>
+					    <% else %>
+
+					    	<th width="15%" data-toggle="tooltip" data-placement= "top" title="Decile ranking for period">Decile Ranking</th>
+					    <% end %>
+
+
 					    <th width="20%" data-toggle="tooltip" data-placement= "top" title="'Rising' means the fund decile ranking has increased from last week, 'Falling' vice versa, 'Stable' no change.">Group Perf.</th>
 					    <th width="25%" data-toggle="tooltip" data-placement= "top" title="Risk group provided by a 3rd party" >Risk Group</th>
 					  </tr>
 					</table>
 					  <div class="body">
 					  	<table class="table-bordered body">
+
 						<% @fund_records.each do |fr| %>
 
 							<% if fr.wr4 > 0 %>
@@ -296,7 +312,7 @@
 							 <tr class= "<%=color %> fund_details_row" >
 							 	<td style="display:none;"><%=fr.fund_id %></td>
 							    <td width="30%"><span class="glyphicon glyphicon-star-empty clickable-div blank-star pull-left"></span><%= link_to fr.fund_name, "#", class: "fund_details_link", value: fr.record_id %></td>
-							    <td class="text-center" width="15%"><%=fr.wr4 %>%</td>
+							    <td class="text-center" width="15%"><%=fr.wr4 %></td>
 							    <td width="20%"><%= fr.group_per %></td>
 							    <td  width="25%"><%=fr.saltydog_group %></td>
 							  </tr>
@@ -317,7 +333,12 @@
 					<table class="table-bordered" >
 					  <tr>
 					    <th width="30%">Name</th>
-					    <th width="15%">Rate Change(4)</th>
+					     <% if @measure=="%Price Change" %>
+					    	<th width="15%" data-toggle="tooltip" data-placement= "top" title="Cumulative price change over the period.">% Price Change</th>
+					    <% else %>
+
+					    	<th width="15%" data-toggle="tooltip" data-placement= "top" title="Decile ranking for period">Decile Ranking</th>
+					    <% end %>
 					    <th width="20%">Sector Perf.</th>
 					    <th width="25%">SaltyDog Grp</th>
 					  </tr>
