finalised enough for user testing for substance and content

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li ><a href="/">Home <span class="sr-only">(current)</span></a></li>
-        <li class="dropdown">
+
+        <!-- admin and porfolio -->
+    <!--     <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/countries">Add countries</a></li>
@@ -32,14 +34,19 @@
           <ul class="dropdown-menu">
             <li><a href="/countries">Manage my portfolios</a></li>
           </ul>
-        </li>
+        </li> -->
+        <!-- admin and portfolio end -->
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+
+      <!-- searchbar start -->
+    <!--   <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Quick Fund Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
+
+      <!-- search bar end -->
      <!--  <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
