--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -107,7 +107,7 @@ ul>li{
   /* an outside constraint to react against */
   .constrainer {
       width: 100%;
-      height: 200px;
+      height: 400px;
   }
 
     .constrainer_sector {
@@ -160,7 +160,14 @@ ul>li{
       background-color: #eee;
   }
 
-  html, body
-{
-  height: 100%;
+   .footer {
+width: 100%;
+height: 20px;
+margin-top: 10px;
+position: relative;
+background-color: orange;
 }
+ .footer .footer-inner,
+.footer .footer-inner .footer-content {
+ width: 100%;
+  }
