--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -73,11 +73,11 @@
 						<td>Sector : </td>
 						<td><p id="fund_sector" style="text-align: left;"></p></td>
 					</tr>
-					<tr>
+				<!-- 	<tr>
 						<td>Area</td>
 						<td><p id="fund_area" style="text-align: left;"></p></td>
 
-					</tr>
+					</tr> -->
 				</table>
 				<br />
 				<h4 style="text-align: left;">Measures</h4>
@@ -230,7 +230,7 @@
 		<%= hidden_field_tag "continent", @view_item  %>
 		<%= hidden_field_tag "investment_sector", @investment_sector  %>
 
-		 <h4>Salty dog groups</h4>
+		 <h4>Risk Groups</h4>
 		<% @groups_selectable.each do |a| %>
 
 			<%= check_box_tag("groups[]", a[0], @groups.include?(a[0].to_s), class: "sl_group") %>
@@ -238,13 +238,11 @@
     		<%=h "#{a[1]}(#{a[2]})" %>
 		<% end %>
 
-		<h4>Time selection</h4>
+		<h4>Time Period selection (weeks)</h4>
 
 		<% ["4", "12", "26"].each do |t| %>
 
 			<% if @time == t %>
-
-	
 
 				<%=radio_button_tag "time", t, true %>
 
@@ -256,7 +254,7 @@
 			<%=h t %>
 		<% end %>
 
-		<h4>% price change or decile ranking</h4>
+		<h4>% price change or <span data-toggle="tooltip" data-placement= "top" title="Each fund is ranked by decile by top 10% (1) down the bottom 10%(10) within the risk group. A higher decile ranking at individual fund or aggregate level is a better area/fund">decile ranking<span></h4>
 		<% ["%Price Change", "Decile"].each do |c| %>
 
 			<% if @measure.to_s == c %>
