--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <script src="https://code.highcharts.com/mapdata/custom/north-america-no-central.js"></script>
   <script src="https://code.highcharts.com/mapdata/custom/europe.js"></script>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'Icon.png' %>
 </head>
 <body>
 
