added the fund isin

--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -73,6 +73,10 @@
 						<td>Sector : </td>
 						<td><p id="fund_sector" style="text-align: left;"></p></td>
 					</tr>
+					<tr>
+						<td>ISIN : </td>
+						<td><p id="fund_isin" style="text-align: left;"></p></td>
+					</tr>
 				<!-- 	<tr>
 						<td>Area</td>
 						<td><p id="fund_area" style="text-align: left;"></p></td>
