--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -1,12 +1,13 @@
-
+<%= debug params %>
 <div class="row">
 	<div class= "col-sm-3">
 		<%= hidden_field_tag "search_string", @search_string  %>
 		<%= hidden_field_tag "map_title", @title  %>
 		<%= hidden_field_tag "map_subtitle", @subtitle  %>
 		<%= hidden_field_tag "continent", @view_item  %>
-	
 
+
+		<%= binding.pry %>
 
 		<div id="things", data-stats= "<%=@things%>" %></div>
 
@@ -347,7 +348,7 @@
 					 </table>
 					  <div class="body">
 					 <table id="selected_funds">
-							
+						
 							 
 
 					
