--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -6,8 +6,8 @@
 		<%= hidden_field_tag "map_subtitle", @subtitle  %>
 		<%= hidden_field_tag "continent", @view_item  %>
 
+		
 
-		<%= binding.pry %>
 
 		<div id="things", data-stats= "<%=@things%>" %></div>
 
@@ -328,8 +328,13 @@
 				</div>
 			</div>
 
-			<h3>Selected funds</h3>
-			
+			<h3>Selected funds
+			<% unless @funds_selected.nil? || @funds_selected.empty? %>
+
+				<span><small>Build Portfolio</small></span>
+
+			<% end %>
+			</h3>
 			<div class="constrainer">
     			<div class="scrolltable">
 
@@ -348,8 +353,30 @@
 					 </table>
 					  <div class="body">
 					 <table id="selected_funds">
-						
-							 
+
+					 <% unless @funds_selected.nil? %>
+
+						<% @funds_selected.each do |fr| %>
+
+							<% if fr.wr4 > 0 %>
+							<% color = "up" %>
+							<% elsif fr.wr4 == 0 %>
+							<% color = "stable" %>
+							<% else %>
+							<% color = "down" %>
+							<% end %>
+
+							
+							 <tr class= "<%=color %> fund_details_row" >
+							 	<td style="display:none;"><%=fr.fund_id %></td>
+							    <td width="30%"><span class="glyphicon glyphicon-star-empty clickable-div blank-star pull-left"></span><%= link_to fr.fund_name, "#", class: "fund_details_link", value: fr.id %></td>
+							    <td class="text-center" width="15%"><%=fr.wr4 %></td>
+							    <td width="20%"><%= fr.group_performance %></td>
+							    <td  width="25%"><%=fr.fund.saltydog_group.name %></td>
+							  </tr>
+
+						<% end %>
+					<% end %>		 
 
 					
 				
