--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,7 +6,7 @@
 
 		<div class="form-controls">
 			<%= f.label :name, "Porfolio Name:" %></br>
-			<%= f.text_field :name %>
+			<%= f.text_field :name , :autofocus=> true  %>
 		</div>
 
 		<div class="form-controls">
