--- a/app/views/portfolios/_selection_box.html.erb
+++ b/app/views/portfolios/_selection_box.html.erb
@@ -14,10 +14,9 @@
 		<div class="body">
 			 <table id="selected_funds">
 
-				<% unless @funds_selected.nil? %>
-
-					<% @funds_selected.each do |fr| %>
-
+				<% unless @funds_selected[0].nil? %>
+					<% count =0 %>
+					<% @funds_selected[0].each do |fr| %>
 						<% if fr.wr4 > 0 %>
 						<% color = "up" %>
 						<% elsif fr.wr4 == 0 %>
@@ -33,8 +32,9 @@
 						    <td width="20%"><%= fr.group_performance %></td>
 						    <td  width="25%"><%=fr.fund.saltydog_group.name %></td>
 						    <td width="25%"><%= link_to "Add", "#", value: fr.fund_id, class: "add_fund_link" %></td>
+						     <td style="display:none;"><%= @funds_selected[1][count].current_price %></td>
 						  </tr>
-
+						  <% count += 1 %>
 					<% end %>
 				<% end %>		 
 				<!-- </ul> -->
