completed main portfolio section

--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -331,7 +331,7 @@
 			<h3>Selected funds
 				<% unless @funds_selected.nil? || @funds_selected.empty? %>
 
-				<span><small><%= link_to "Build Portfolio", portfolios_path %></small></span>
+				<span><small><%= link_to "Build Portfolio", new_portfolio_path %></small></span>
 
 				<% end %>
 			</h3>
