--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,60 +1,70 @@
 <div class ="row">
-	<div class="col-sm-offset-1 col-sm-7">
+	<div class="col-sm-offset-1 col-sm-10">
 
+	<% @portfolios.each do |portfolio| %>
 
-	<%=form_for @portfolio do |f| %>
-
-		<div class="form-controls">
-			<%= f.label :name, "Porfolio Name:" %></br>
-			<%= f.text_field :name , :autofocus=> true  %>
-		</div>
-
-		<div class="form-controls">
-			<%= f.label :total_funding, "Total funding" %></br>
-			<%= f.text_field :total_funding %>
-		</div>
-		<br/>
-
-	<table class="table table-striped" id="portfolio_table">
-	<tr>
-	    <th width="20%">Fund Name</th>
-	    <th width="20%">Allocation (%)</th>
-	    <th width="20%">Funding (£)</th>
-	    <th width="20%">Price</th>
-	    <th width="20%">Remove</th>
-	 </tr>
-	 	
-	</table>
-
-
-
-	<table class="table table-striped">
-
-		<tr>
-			<td width="20%">Cash Account</td>
-			<td width="20%" id="cash_allocation"></td>
-			<td width="20%" id="cash_funding"></td>
-			<td width="20%" id="cash_price">1.00</td>
-			<td width="20%"></td>
-		</tr>
-		<tr>
-			<td width="20%">Totals</td>
-			<td width="20%" id="allocation"></td>
-			<td width="20%" id="total_funding"></td>
+		<div>
+			<h4>Portfolio Name: <span><%= portfolio.name %></span></h4>
 		
-		</tr>
-	</table>
+			
+		</div>
+
+		<div>
+			<h4>Funding : <span><%= portfolio.total_funding %></span></h4></br>
+			
+		</div>
+
+		<div>
+			<h4>Current Value : <span><%= current_portfolio(portfolio) %></span></h4></br>
+			
+		</div>
 
 
-	<%= f.submit "Save portfolio", class: "btn btn-lg btn-success" %>
+		<table class="table table-striped" id="portfolio_table">
+			<tr>
+				<th width="5%">Initial Trade Date</th>
+			    <th width="20%">Fund Name</th>
+			    <th width="5%">Units</th>
+			    <th width="5%">Original Price</th>
+			    <th width="5%">Current Price</th>
+			    <th width="10%">Current Value</th>
+			    <th width="10%">Original Cost</th>
+			    <th width="10%">Profit/Loss (£)</th>
+			    <th width="5%">Profit/Loss (%)</th>
+
+			    <th width="5%">Original Allocation</th>
+			    <th width="5%">Current % of Portfolio</th>
+			 
+			 </tr>
+
+			 <% portfolio.portfolio_records.each do |portfolio_record| %>
+				 <tr>
+				 	<td><%=portfolio_record.created_at.strftime("%d/%m/%y") %></td>
+				 	<td><%=portfolio_record.fund.name %></td>
+				 	<td><%=portfolio_record.units %></td>
+				 	<td><%=portfolio_record.buy_price %></td>
+				 	<td><%=portfolio_record.current_price %></td>
+				 	<td><%=current_value(portfolio_record) %></td>
+				 	<td><%=original_cost(portfolio_record) %></td>
+				 	<td><%=monetary_profit(portfolio_record) %></td>
+				 	<td><%=percent_profit(portfolio_record) %></td>
+				 	<td><%=original_allocation(portfolio_record) %></td>
+				 	<td><%=current_portfolio_percent(portfolio_record, portfolio) %></td>
+				 	
+				 </tr>
+			 <% end %>
+	 		
+		</table>
+
+
+
 
 	<% end %>
 
 	</div>
 
-	<div class="col-sm-4">
-		<h3>Selected funds</h3>
-		<%= render "selection_box" %>
-	</div>	
+
+
+		
 </div>
 
