--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -12,7 +12,7 @@
 		<div id="things", data-stats= "<%=@things%>" %></div>
 
 
-	<h4 data-toggle="tooltip" data-placement= "top" title="Investment sectors provided by the IMA"><span><%=link_to "back to main view",  "/home/show_area?continent=home" %>  </span>Investment Sectors</h3>
+	<h4 data-toggle="tooltip" data-placement= "top" title="Investment sectors provided by the IMA"><span><%=link_to "back to main view",  "/" %>  </span>Investment Sectors</h3>
 	<div class="constrainer_sector">
     	<div class="scrolltable">
 		<table class="table-bordered">
@@ -314,7 +314,9 @@
 							
 							 <tr class= "<%=color %> fund_details_row" >
 							 	<td style="display:none;"><%=fr.fund_id %></td>
-							    <td width="30%"><span class="glyphicon glyphicon-star-empty clickable-div blank-star pull-left"></span><%= link_to fr.fund_name, "#", class: "fund_details_link", value: fr.record_id %></td>
+							    <td width="30%">
+							    <!-- 	<span class="glyphicon glyphicon-star-empty clickable-div blank-star pull-left"></span> -->
+							    	<%= link_to fr.fund_name, "#", class: "fund_details_link", value: fr.record_id %></td>
 							    <td class="text-center" width="15%"><%=fr.wr4 %></td>
 							    <td width="20%"><%= fr.group_per %></td>
 							    <td  width="25%"><%=fr.saltydog_group %></td>
@@ -327,7 +329,7 @@
 					</div>
 				</div>
 			</div>
-
+<!-- 
 			<h3>Selected funds
 			<% unless @funds_selected.nil? || @funds_selected.empty? %>
 
@@ -381,7 +383,7 @@
 					
 				
 						<!-- </ul> -->
-					</table>
+					</table> -->
 				</div>
 				</div>
 			</div>
