--- a/app/assets/stylesheets/liner_gauge.css
+++ b/app/assets/stylesheets/liner_gauge.css
@@ -1,4 +1,4 @@
-html{
+/*html{
   font-family: helvetica, arial, 'sans-serif';
   text-align: center;
   background: #446;
@@ -87,4 +87,4 @@ section {
     #559 73%, 
     #114 75%, 
     rgba(0,0,0,0) 75%);
-}
+}*/
