--- a/app/views/home/_main.html.erb
+++ b/app/views/home/_main.html.erb
@@ -315,7 +315,7 @@
 							 <tr class= "<%=color %> fund_details_row" >
 							 	<td style="display:none;"><%=fr.fund_id %></td>
 							    <td width="30%">
-							    <!-- 	<span class="glyphicon glyphicon-star-empty clickable-div blank-star pull-left"></span> -->
+							    	<span class="glyphicon glyphicon-star-empty clickable-div blank-star pull-left"></span>
 							    	<%= link_to fr.fund_name, "#", class: "fund_details_link", value: fr.record_id %></td>
 							    <td class="text-center" width="15%"><%=fr.wr4 %></td>
 							    <td width="20%"><%= fr.group_per %></td>
@@ -329,7 +329,7 @@
 					</div>
 				</div>
 			</div>
-<!-- 
+
 			<h3>Selected funds
 				<% unless @funds_selected.nil? || @funds_selected.empty? %>
 
